--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Hello world!</h1>
-  <script async src="/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
